@@ -3,6 +3,7 @@ package com.group.pdc_assignment_rpg.logic.entities;
 import com.googlecode.lanterna.TextColor;
 import com.group.pdc_assignment_rpg.logic.items.Inventory;
 import com.group.pdc_assignment_rpg.logic.StatBlock;
+import java.lang.*;
 
 /**
  * Holds data and information of a mob in the game. Based on player design from
@@ -65,11 +66,11 @@ public class Mob extends Creature {
      *
      */
     public void setName(String name) throws IllegalArgumentException {
-        if (!name.isBlank()) {
-            this.name = name;
-        } else {
-            throw new IllegalArgumentException("Cannot set name to null.");
-        }
+        if (name.trim().isEmpty()) {
+	    throw new IllegalArgumentException("Cannot set name to null.");
+	} else {
+	    this.name = name;
+	}
     }
 
     public void setLevel(int level) throws IllegalArgumentException {
